# chihuahua

./: Cargo.toml
frontend/: .pnp.cjs  .tsbuildinfo  CHANGELOG.md  agent.md  index.html  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/skills/bug-fix/: SKILL.md
frontend/skills/feature-development/: SKILL.md
frontend/skills/github-issue-agent/: SKILL.md
frontend/src/: App.tsx  utils.ts
frontend/src/sections/About/: About.tsx
frontend/src/sections/Cases/: Cases.tsx
frontend/src/sections/Contact/: Contact.tsx
frontend/src/sections/Faq/: Faq.tsx
frontend/src/sections/Footer/: Footer.tsx
frontend/src/sections/Form/: Form.tsx
frontend/src/sections/Header/: Header.tsx
frontend/src/sections/Hero/: Hero.tsx
frontend/src/sections/Points/: Points.tsx
frontend/src/sections/Process/: Process.tsx
frontend/src/sections/Services/: Services.tsx
frontend/src/sections/Stats/: Stats.tsx
frontend/src/sections/Steps/: Steps.tsx
loan-html/: index.html
loan-html/assets/: index-BAwU1VfF.js  index-BFttXJ7_.js  index-BOEAxSMY.css  index-BchG-d33.css  index-BszAZRYi.js  index-C-b8ouQs.css  index-C-kcldWu.js  index-C1odFWcb.js  index-C6TDhM2P.css  index-CLaOdzpk.css  index-CUDlQOct.js  index-CitMUit4.js  index-CjyV9VWj.js  index-Cmnk8_0a.js  index-CpJ2o9Xa.js  index-Cv2IxYBa.js  index-DSliQkNw.css  index-DSwHV-g3.js  index-DVgd0K4T.js  index-DfwwWqDy.css  index-DpD1Hzal.css  index-Dst5q5vq.js  index-EYV5CUTs.css  index-F4oQM30A.js  index-QWZqfGii.css  index-pur4o_IF.js
src/: main.rs
