[package]
name = "chihuahua"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing-subscriber = "0.3.23"
